[package]
name = "voxel-tiler-core"
version = "0.2.1"
authors = ["azishio"]
edition = "2021"
description = "Convert point clouds to voxel data."

documentation = "https://docs.rs/voxel-tiler-core"
homepage = "https://crates.io/crates/voxel-tiler-core"
repository = "https://github.com/azishio/voxel-tiler-core-rs"

readme = "README.md"

keywords = ["voxel", "point-cloud", "las", "ply"]
categories = ["concurrency", "data-structures", "encoding", "mathematics", "science::geo"]
license = "MIT OR Apache-2.0"

exclude = ["examples", "benches"]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", optional = true }
coordinate-transformer = { version = "1.5.0", features = ["vec-x"] }
dashmap = "6.0.1"
fxhash = "0.2.1"
gltf = "1.4.1"
indexmap = "2.2.6"
las = { version = "0.8.7", optional = true }
laz = { version = "0.9.1", optional = true }
nohash = "0.2.0"
num = "0.4.3"
ordered-float = "4.2.0"
ply-rs = "0.1.3"
png = "0.17.13"
rayon = { version = "1.10.0", optional = true }
vec-x = "0.8.0"
zune-png = "0.4.10"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["jamalloc", "rayon"]
rayon = ["dep:rayon", "laz/parallel", "las/laz-parallel", "indexmap/rayon"]
jamalloc = ["dep:tikv-jemallocator"]
print-log = ["dep:chrono"]
