[package]
name = "voxel-tiler-core"
version = "0.2.1"
authors = ["azishio"]
edition = "2021"
description = "Convert point clouds to voxel data."

documentation = "https://docs.rs/voxel-tiler-core"
homepage = "https://crates.io/crates/voxel-tiler-core"
repository = "https://github.com/azishio/voxel-tiler-core-rs"

readme = "README.md"

keywords = ["voxel", "point-cloud", "las", "ply"]
categories = ["concurrency", "data-structures", "encoding", "mathematics", "science::geo"]
license = "MIT OR Apache-2.0"

exclude = ["examples", "benches"]

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
coordinate-transformer = { version = "1.7.0", features = ["vec-x"] }
dashmap = "6.0.1"
fxhash = "0.2.1"
gltf = "1.4.1"
image = { version = "0.25.1", optional = true }
indexmap = "2.2.6"
las = { version = "0.8.7", optional = true, features = ["laz"] }
laz = { version = "0.9.1", optional = true }
meshopt = "0.3.0"
nohash = "0.2.0"
num = "0.4.3"
ordered-float = "4.2.0"
ply-rs = { version = "0.1.3", optional = true }
vec-x = "0.8.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["jamalloc"]
jamalloc = ["dep:tikv-jemallocator"]
ply = ["dep:ply-rs"]
las = ["dep:las", "dep:laz"]
image = ["dep:image"]

[[example]]
name = "terrain"
path = "examples/terrain_glb.rs"
required-features = ["image"]

[[example]]
name = "tile"
path = "examples/voxel_tile.rs"
required-features = ["las"]

[[example]]
name = "bunny"
path = "examples/voxel_bunny.rs"
required-features = ["ply"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
